dnl Process this file with autoconf to produce a configure script.
dnl
AC_INIT(ed.h)
AC_CONFIG_HEADER(config.h)

AC_PROG_LN_S
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_ISC_POSIX
AC_PROG_CC
AC_C_CONST
AC_HEADER_STDC
AC_CHECK_HEADERS(limits.h memory.h string.h unistd.h locale.h)
AC_CHECK_FUNCS(setbuffer sigsetjmp sigaction strerror)
AC_FUNC_VPRINTF
AC_FUNC_ALLOCA
if test "$ALLOCA" = alloca.o; then
  AC_SUBST(LIBOBJS)LIBOBJS="$LIBOBJS xmalloc.o error.o"
fi

AC_OUTPUT(Makefile)


