dnl Process this file with autoconf to produce a configure script.
AC_INIT(indent.c)
AM_INIT_AUTOMAKE(indent, 2.2.6)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_AIX
AC_MINIX
AC_ISC_POSIX
AC_EXEEXT
AC_OBJEXT
AM_C_PROTOTYPES
AC_C_CONST

AC_HEADER_STDC
AC_CHECK_FUNCS(strchr memcpy memmove utime)
AC_CHECK_HEADERS(unistd.h string.h malloc.h utime.h sys/utime.h)

if test "$ac_cv_func_utime" = yes ; then
if test "$ac_cv_header_utime_h" = yes ; then
indent_UTIMBUF
fi
fi

AC_HEADER_DIRENT

AC_OUTPUT(Makefile maintMakefile)
