dnl Process this file with autoconf to produce a configure script.
AC_INIT(unzip.c)
AC_PREREQ(2.12)
AM_INIT_AUTOMAKE(unzip, 5.12)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_LN_S

dnl Checks for libraries.
dnl Replace `main' with a function in -lbsd:
AC_CHECK_LIB(bsd, main)
dnl Replace `main' with a function in -lc_s:
AC_CHECK_LIB(c_s, main)
dnl Replace `main' with a function in -lseq:
AC_CHECK_LIB(seq, main)

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h limits.h strings.h sys/file.h sys/time.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_STRUCT_ST_BLKSIZE
AC_STRUCT_ST_BLOCKS
AC_STRUCT_ST_RDEV
AC_STRUCT_TM

dnl Checks for library functions.
AC_FUNC_SETVBUF_REVERSED
AC_TYPE_SIGNAL
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(ftime mkdir rmdir)

AC_OUTPUT(unix/Makefile Makefile amiga/Makefile atari/Makefile human68k/Makefile mac/Makefile msdos/Makefile nt/Makefile os2/Makefile ram/Makefile tops20/Makefile vms/Makefile, [test -z "$CONFIG_HEADERS" || date >stamp-h])
